small changes, still nothing of great importance. revised 404 error msg.

--- a/404.html
+++ b/404.html
@@ -1,1 +1,7 @@
-Sorry this page does not exist =(
+</style>
+</head>
+<body>
+  <h1><font face="verdana"> Error: 404 - <font color="009933">This page cannot be found. :( </font></h1>
+ 
+  <p class="intro">It might have been removed, changed location name, or is temporarily unavailable...
+    Please check that the url address is spelled correctly.</p>
