--- a/404.html
+++ b/404.html
@@ -1,7 +1,16 @@
 </style>
 </head>
 <body>
-  <h1><font face="verdana"> Error: 404 - <font color="009933">This page cannot be found. :( </font></h1>
- 
-  <p class="intro">It might have been removed, changed location name, or is temporarily unavailable...
-    Please check that the url address is spelled correctly.</p>
+
+  <h1><font face="cantarell"> Error: 404 </h1>
+
+  <h1><font color="009933">This page cannot be found. :( </font></h1>
+
+
+  <p class="intro">It might have been removed, changed location name, or is temporarily unavailable...</p>
+  <p>Please check that the url address is spelled correctly.</p>
+
+
+</body>
+
+
