--- a/404.html
+++ b/404.html
@@ -1,16 +1,56 @@
-</style>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta http-equiv="Content-type" content="text/html; charset=utf-8">
+    <title>Page not found - kduggan.github.io</title>
+    <style type="text/css" media="screen">
+      body {
+        background-color: #EEE;
+        margin: 0;
+        font-family: "Helvetica", Helvetica, Arial, sans-serif;}
+
+      .container { margin: 50px auto 40px auto; width: 600px; text-align: center; }
+
+      a { color: #88A0A1; }
+      a:hover { text-decoration: underline; }
+
+      h1 { width: 800px; position:relative; left: -100px; letter-spacing: 1px; line-height: 50px; font-size: 60px; font-weight: 100; margin: 0px 0 50px 0; text-shadow: 0 1px 0 #fff; }
+      p { color: rgba(0, 0, 0, .7); margin: 20px 0; line-height: 1.5; }
+
+      ul { list-style: none; margin: 25px 0; padding: 0; }
+      li { display: table-cell; font-weight: bold; }
+
+      #status {
+        margin-top: 35px;
+        color: #ccc;}
+      #status a {
+        color: #a9a9a9;
+        font-weight: 200;
+        font-size: 14px;
+        margin: 0 10px;}
+
+    </style>
+
 </head>
 <body>
 
-  <h1><font face="cantarell"> Error: 404 </h1>
+    <div class="container">
 
-  <h1><font color="009933">This page cannot be found. :( </font></h1>
+      <h1>404</h1>
+      <p><strong>Page not found.</strong></p>
 
+      <p class="intro">It might have been removed, changed location name, or is temporarily unavailable.<br>
+        Please check that the url address is spelled correctly.</p>
 
-  <p class="intro">It might have been removed, changed location name, or is temporarily unavailable...</p>
-  <p>Please check that the url address is spelled correctly.</p>
+      <p><a href="https://kduggan.github.io/">Click here</a> to return to Kyle Duggan's page.</p>
 
+      <div id="status">
+        <a href="https://status.github.com">Check GitHub Status</a>
+      </div> 
+      <br> 
+      <div class="btn-group"> <a href="https://kduggan.github.io/"><img src="https://dl.dropboxusercontent.com/u/50108349/Blag/github-sociocon.png" alt="Back to github page" width="24" /></a> <a href="https://twitter.com/Kyle_Duggan"><img src="https://dl.dropboxusercontent.com/u/50108349/Blag/twitter-sociocon.png" alt="Follow Kyle on Twitter" width="24" /></a> <a href="mailto:kyle.duggan@hotmail.ca?Subject=Hello%20Kyle" target="_top"><img src="https://dl.dropboxusercontent.com/u/50108349/Blag/email-sociocon2.png" alt="Email Kyle" width="24" /></a></div>  
 
+  
 </body>
-
+</html>
 
