--- a/404.html
+++ b/404.html
@@ -42,9 +42,10 @@
       <p class="intro">It might have been removed, changed location name, or is temporarily unavailable.<br>
         Please check that the url address is spelled correctly.</p>
 
-      <p><a href="https://kduggan.github.io/">Click here</a> to return to Kyle Duggan's page.</p>
-
-      <div id="status">
+      <p>The page may still be accessible from <a href="https://kduggan.github.io/archive.html">here.</a>
+      <p><a href="https://kduggan.github.io/">Click here</a> to return to Kyle Duggan's main page.</p>
+	      
+	      <div id="status">
         <a href="https://status.github.com">Check GitHub Status</a>
       </div> 
       <br> 
